# personal_journal

./: .gitignore  .pgpass  README.md  manage.py  pyproject.toml  tasks.py  tox.ini
config/: settings.py  urls.py  wsgi.py
cost_journal/: apps.py  models.py  urls.py  views.py
cost_journal/migrations/: 0001_initial.py
data/: expenses.csv
development/: Dockerfile  create_superuser.py  creds.env  creds.env.example  dev.env  docker-compose.yml  entrypoint.sh
docs/: build.sh  start.sh
expenses/: admin.py  apps.py  models.py  urls.py  views.py
expenses/migrations/: 0001_initial.py
expenses/templates/cost_journal/: expense.html  expense_form.html  index.html
expenses/templates/expenses/: expense.html  expense_form.html  index.html
personal_journal/: asgi.py  settings.py  urls.py
self_discipline/: asgi.py  settings.py  urls.py  wsgi.py
