[tool.poetry]
name = "personal-journal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
pydocstyle = "^6.3.0"

[tool.pylint]
ignore = ["manage.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
