[tool.poetry]
name = "personal-journal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1"
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"
invoke = "^2.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 79

[tool.pylint]
ignore = ["manage.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
